app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/* Application Styles */

body {
  font-family: 'Lato', sans-serif;
}

#application-navbar {
  background: #F9F9F9;
  border: 0;
  border-bottom: 1px solid #e3e3e3;
  padding: 5px;
  margin: 0;
}

.navbar-brand img {
  max-width: 225px;
  max-height: 100%;
}

.navbar-default .navbar-nav > li > a {
  color: #295c8a;
  font-size: 16px;
  transition: all 250ms;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  margin-top: 3px;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
  background-color: #F5F5F5;
}

.full-height {
  height: 100%;
  min-height: 100vh;
}

.relative {
  position: relative;
}

/* General Styles */

.homepage-wrapper {
  background: url('fam-homepage-background.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.homepage-logo {
  width: 50%;
  min-width: 290px;
  max-width: 600px;
  margin: 45px 0 55px 0;
}

.homepage-form-header {
  color: #F5F5F5;
  font-size: 20px;
  margin: 0 0 20px 0;
}

.homepage-form-label {
  color: #F5F5F5;
  display: inline-block;
  font-size: 17px;
  padding-right: 10px;
}

.homepage-form-input {
  outline: none !important;
  border: 1px solid #e3e3e3;
  padding: 5px 11px;
  width: 100%;
  max-width: 230px;
  border-radius: 4px;
  transition: all 250ms;
}

.homepage-form-input:focus,
.homepage-form-input:active,
.homepage-form-input:hover {
  border: 1px solid #0275db;
}

.homepage-form-submit {
  display: block;
  margin: 20px auto;
  border: 2px solid #F5F5F5;
  background: #ca2626;
  color: #F5F5F5;
  font-weight: 600;
  font-size: 15px;
  border-radius: 50px;
  padding: 6px 33px;
  outline: none !important;
  text-transform: uppercase;
  letter-spacing: 0.5px;
  transition: all 250ms;
}

.homepage-form-submit:hover,
.homepage-form-submit:active,
.homepage-form-submit:focus {
  filter: brightness(95%);
}

.homepage-copyright-footer {
  position: absolute;
  text-align: left;
  bottom: 30px;
  left: 45px;
  color: #F5F5F5;
}

